/*
 * $Id: ChangeLog,v 1.43 2002/01/23 23:33:51 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-01-23 18:45 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    + Reinstated hb_vmMessage() to support 3rd part products that still rely on the function.

2002-01-23 15:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    + Added support for __XHARBOUR__ auto defined.

  * source/vm/hvm.c
    * Added logic in hb_vmDo() to detect ill-behaved calls to hb_vmDo(), which were suppose to call hb_vmSend() instead.
      /* This can only happen in 3rd party tools internals, like FWH, etc. */

  * tests/pp_harb.ch
    + Added _#ifdef __XHARBOUR__ to protect against xHarbour fastapi reliance, when compiled by other compilers.

  * tests/tstloop.prg
    + Added Left( @cVarByRef ) test.

2002-01-23 08:30 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/Makefile
    + Added fastitem.c to list of sources.

  * include/hbexprb.c
  * source/vm/hvm.c
    ! Minor optimization for Left( @cVarByRef, ... )

  * source/common/hbffind.c
  * /source/rdd/dbfntx/dbfntx1
    * Synched with the following from Harbour:
        2002-01-23 09:40 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
          * source\common\hbffind.c
            * Since I had used an undocumented 0x04000 as an attribute check.
            * it was causing trouble. Fixed.

        2002-01-23 09:10 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
          * source\common\hbffind.c
            * removed extra comment marker.

        2002-01-22 22:30 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
          * source\common\hbffind.c
            * It seems that at some point prior to the release of Win2k, MS
            * changed the definition of FILE_ATTRIBUTE_ENCRYPTED from
            * 0x00004000 to 0x00000040