@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.43 2002/01/23 23:33:51 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.44 2002/01/24 02:47:18 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-01-23 21:35 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/hvm.c
+    ! Fixed hb_vmMessage() to use the swap logic (which was removed in test before removal).
 
 2002-01-23 18:45 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/vm/hvm.c
